--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
 	background-color: white;
 	padding-left: 50px;
 	padding-right: 50px;
-	padding-top: 0px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -37,31 +36,31 @@ rank {
 }
 }
 
- /*------------------------- Icons --------*/
+/*------------------------- Section Heading --------*/
 
-.kittenMittens {
-	width: 150px;
-}
 
-.kittenMittens1 {
+	/*------------------------- Pub Photos --------*/
+
+
+.pubPhoto {
 	width: 150px;
 	border-radius: 50%;
 	border: 5px solid #1D1D1;
 }
 
 @media only screen and (max-width: 700px) {
-.kittenMittens1 {
+.pubPhoto {
 	width: 100px;
 	border-radius: 50%;
 	border: 5px solid #1D1D1;
-}
+}}
+
+.iconHeadingRight {
+	text-align: left;
 }
 
-@media only screen and (max-width: 600px) {
-  .kittenMittens {
-	width: 80%;
-}
-}
+
+	/*------------------------- Pub Names --------*/
 
 .iconHeadingLeft {
 	align-items: center;
@@ -72,21 +71,12 @@ rank {
 
 @media only screen and (max-width: 700px) {
 .iconHeadingLeft {
-	align-items: center;
-	display: flex;
 	font-size: 165%;
 	
-}
-}
+}}
 
-
-.iconHeadingRight {
-	text-align: left;
-	font-family: Courier New;
-	font-size: 200%;
-	font-weight: bold;
-}
-
+	
+	/*------------------------- Rating --------*/
 
 .stars {
   	text-align: center;
@@ -95,11 +85,6 @@ rank {
   	font-size: 1.5em;
 	padding-bottom: 15px;
 	padding-top: 0px;
- }
-
- a {
-  color: black;
-  text-decoration: none;
  }
 
 .rosette {
@@ -117,27 +102,8 @@ rank {
 	width: 60px;
 }
 }
- /*-------------------------Banner Image styling--------*/
+ /*------------------------- Pint Glass Banner Image styling--------*/
 
- .mobileShow {
-  display: none;
- }
-
- @media only screen and (min-device-width: 0px) and (max-device-width: 1000px) {
-  .mobileShow {
-   display: inline;
-  }
- }
-
- .mobileHide {
-  display: inline;
- }
-
- @media only screen and (min-device-width: 0px) and (max-device-width: 1000px) {
-  .mobileHide {
-   display: none;
-  }
- }
 
 .bannerImage {
 	text-align: center;
@@ -195,9 +161,9 @@ ul#myUL {
 }
 }
 
-/*-------------------------Drop down contents--------*/
+/*------------------------- Drop down contents --------*/
 
-	/*-------------------------Social Media Icons--------*/
+	/*------------------------- Social Media Icons --------*/
 
  .social-media-icons {
   	text-align: center;
@@ -214,6 +180,8 @@ ul#myUL {
   text-decoration: none;
  }
 
+
+	/*------------------------- Address and Opening Times --------*/
 
 .address {
 	text-align: left;
@@ -237,8 +205,8 @@ ul#myUL {
 	border: none;
 	width: 50%;
 	text-align: center;
-	font-family: "Architects Daughter", cursive;
-	font-size: 150%;
+	font-family: "Alumni Sans Inline One", sans-serif;
+	font-size: 180%;
 	transition: transform .2s
 }
 
@@ -247,7 +215,8 @@ ul#myUL {
   	padding: 1px;
 	padding-left: 20px;
 	width: 100%;
-	font-size: 100%;
+	font-size: 90%;
+	padding-bottom: 15px;
   }
 }
 
