--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,24 @@ rank {
 	
 }
 
+.iconHeadingLeftSmall {
+	align-items: center;
+	display: flex;
+	font-size: 130%;
+	
+}
+
 @media only screen and (max-width: 700px) {
 .iconHeadingLeft {
 	font-size: 165%;
+	
+}}
+
+@media only screen and (max-width: 700px) {
+.iconHeadingLeftSmall {
+	align-items: center;
+	display: flex;
+	font-size: 150%;
 	
 }}
 
